# pyramid-mcp

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.rst  Makefile  README.md  debug_mcp_direct.py  debug_multiple_views.py  mcp_client_test.py  mkdocs.yml  mypy.ini  pyproject.toml  pytest.ini  tox.ini
.devcontainer/: README.md  devcontainer.json  docker-compose.yml  post-install.sh
docs/: development.md  index.md  integration.md  modules.md  publishing.md
examples/: README.md  pyramid_app_example.py  simple_app.py
examples/cornice_bearer/: Dockerfile  README.md  cornice_bearer_app.py  pyproject.toml  services.py
examples/secure/: Dockerfile  README.md  claude-integration.md  development.ini  pyproject.toml  secure_app.py
examples/simple/: Dockerfile  README.md  pyproject.toml  simple_app.py
planning/: README.md  backlog.md  done.md  feature-template.md  general.md  open-source-pypi.md  pyramid-mcp-core.md  route-discovery-feature.md  route-discovery.md
pyramid_mcp/: __init__.py  cli.py  core.py  introspection.py  protocol.py  schemas.py  wsgi.py
tests/: README.md  __init__.py  conftest.py  test_basic.py  test_configurable_security_parameter.py  test_cornice_protected_schema.py  test_integration.py  test_integration_auth.py  test_integration_end_to_end.py  test_integration_plugin.py  test_integration_webtest.py  test_mcp_client.py  test_mcp_description_feature.py  test_mcp_security_exposure.py  test_plugin.py  test_pyramid_tm_integration.py  test_real_route_calling.py  test_route_discovery.py  test_route_discovery_webtest.py  (+11 more)
(+59 files in other folders)
